comment in template

--- a/src/template.ejs
+++ b/src/template.ejs
@@ -11,6 +11,6 @@
     <div id="root">
       <noscript>JavaScript is required to display this website.</noscript>
     </div>
-    <!--made with ❤️-->
+    <!--made with ❤️ -frndxfrnd-->
   </body>
 </html>
