--- a/src/template.ejs
+++ b/src/template.ejs
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!--
+    <title></title>
+    <meta name="description" content="">
+    -->
     <meta charset="utf-8">
     <meta content="ie=edge" http-equiv="x-ua-compatible">
     <meta content="width=device-width,initial-scale=1,shrink-to-fit=no" name="viewport">
